Fix SDG Details title spacing

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -606,15 +606,6 @@ input[type=file]::file-selector-button:hover{
   background: #6B7280;
 }
 
-.dark input[type=file]::file-selector-button{
-  color: white;
-  background: #4B5563;
-}
-
-.dark input[type=file]::file-selector-button:hover{
-  background: #6B7280;
-}
-
 input[type="range"]::-webkit-slider-thumb{
   height: 1.25rem;
   width: 1.25rem;
@@ -11326,6 +11317,10 @@ ul li .bullet{
     height: 2.25rem;
   }
 
+  .sm\:items-center{
+    align-items: center;
+  }
+
   .sm\:px-4{
     padding-left: 1rem;
     padding-right: 1rem;
@@ -11363,6 +11358,10 @@ ul li .bullet{
 
   .md\:flex-row{
     flex-direction: row;
+  }
+
+  .md\:items-center{
+    align-items: center;
   }
 
   .md\:space-x-8 > :not([hidden]) ~ :not([hidden]){
@@ -11437,6 +11436,10 @@ ul li .bullet{
 
   .lg\:flex-row{
     flex-direction: row;
+  }
+
+  .lg\:items-center{
+    align-items: center;
   }
 
   .lg\:pl-10{
